--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "@testcontainers/postgresql": "^10.13.2",
-    "testcontainers": "^10.13.2"
+    "testcontainers": "^10.13.2",
+    "@testcontainers/valkey": "^10.13.2"
   },
   "dependencies": {
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@valkey/valkey-glide": "^1.3.0"
   },
   "volta": {
     "node": "22.20.0"
